--- a/tiendamujer.html
+++ b/tiendamujer.html
@@ -40,7 +40,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Mujer</a></li>
                     <li><a class="dropdown-item" href="#">Hombre</a></li>
-                    <li><a class="dropdown-item" href="#">Niños</a></li>
+                    
                 </ul>
             </li>
             </ul>
@@ -91,7 +91,7 @@
                 <div class="col-12 col-md-6 col-lg-3 col-sm-12">
                     <img class="tienda mt-4 mb-2" src="img/pantalosmujerE.webp" alt="">
                     <h5 class="mt-2 text-dark">Sudadera Clasica Nautica</h5>
-                    <h4 class="text-white">$41.900</h4>
+                    <h4 class="">$41.900</h4>
                     <a class="btn btn-success  mb-2" href="pantalonmujer1.html" role="button">ver info</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 col-sm-12">
