--- a/navparatodo.html
+++ b/navparatodo.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg bg-negro fixed-top">
         <div class="container-fluid ">
-            <a class="navbar-brand text-white" href="#"><span class="text-success">Vida</span>Fit</a>
+            <a class="navbar-brand text-white mb-1 fs-3" href="#"><span class="text-success"><i class="fa-solid fa-heart-pulse"></i>Vida</span >Fit</a>
             <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon bg-success "></span>
             </button>
@@ -39,7 +39,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Mujer</a></li>
                     <li><a class="dropdown-item" href="#">Hombre</a></li>
-                    <li><a class="dropdown-item" href="#">Niños</a></li>
+                    
                 </ul>
             </li>
             </ul>
